--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-content">
-            <img src="https://images.squarespace-cdn.com/content/v1/696ec59c52323504540627fe/d347d282-e324-4602-a682-dac30f84cd3f/lumenLogonegro.png" alt="LUMEN Economic Intelligence" class="logo">
+            <img src="lumenLogonegro.png" alt="LUMEN Economic Intelligence" class="logo">
             <ul class="nav-links">
                 <li><a href="#about">Nosotros</a></li>
                 <li><a href="#services">Servicios</a></li>
@@ -718,7 +718,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="https://images.squarespace-cdn.com/content/v1/696ec59c52323504540627fe/90de0785-9422-4408-9fa6-50bf9d07a241/lumenLogo.png" alt="LUMEN Economic Intelligence" class="hero-logo">
+            <img src="lumenLogo.png" alt="LUMEN Economic Intelligence" class="hero-logo">
             <h1>Clarity for Complex Decisions</h1>
             <p class="hero-subtitle">
                 Apoyamos a tomadores de decisión de alto nivel en contextos de alta incertidumbre económica, fiscal y regulatoria
