--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
             <h2>Quién está detrás de LUMEN</h2>
         </div>
         <div class="leader-profile">
-            <img src="luis-fernando-mejia.jpg" alt="Luis Fernando Mejía" class="leader-image reveal">
+            <img src="luis-fernando-mejia.png" alt="Luis Fernando Mejía" class="leader-image reveal">
             <div class="leader-info reveal">
                 <h3>Luis Fernando Mejía</h3>
                 <p class="leader-title">Fundador & CEO – LUMEN Economic Intelligence</p>
