--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
         [data-lang="en"] { display: none; }
         body.lang-en [data-lang="es"] { display: none; }
         body.lang-en [data-lang="en"] { display: block; }
+        body.lang-en li[data-lang="en"] { display: flex; }
     </style>
 </head>
 <body class="lang-es">
