--- a/index.html
+++ b/index.html
@@ -737,6 +737,8 @@
         body.lang-en [data-lang="es"] { display: none; }
         body.lang-en [data-lang="en"] { display: block; }
         body.lang-en li[data-lang="en"] { display: flex; }
+        li[data-lang="es"] { display: flex; }
+        li[data-lang="en"] { display: none; }
     </style>
 </head>
 <body class="lang-es">
